Padding charts fix

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ tbody tr:nth-child(3) {
     padding: 10px;
 }
 
+.padding-20 {
+    padding: 20px !important;
+}
+
 #login-button {
     color: white;
     border: 1px solid white;
