--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,14 @@
 @media screen and (max-width: 600px) {
     .margin-basic {
-        margin-left: 3%;
-        margin-right: 3%;
+        margin-left: 1%;
+        margin-right: 1%;
     }
 }
 
 @media screen and (min-width: 600px) {
     .margin-basic {
-        margin-left: 8%;
-        margin-right: 8%;
+        margin-left: 6%;
+        margin-right: 6%;
     }
 }
 
@@ -86,6 +86,16 @@ td, th {
     background-color: white;
 }
 
+#image-dummy {
+    width: 100%;
+    max-width: 300px;
+}
+
+.add-song-button-div {
+    text-align: center;
+    padding: 10px;
+}
+
 .submit-button {
     width: 100%;
 }
@@ -98,7 +108,7 @@ td, th {
     width: 100%;
 }
 
-.number-one-text {
+.center-align {
     display: flex;
     align-items: center;
     justify-content: center;
