--- a/public/style.css
+++ b/public/style.css
@@ -91,7 +91,7 @@ td, th {
     max-width: 300px;
 }
 
-.add-song-button-div {
+.add-button-div {
     text-align: center;
     padding: 10px;
 }
@@ -100,7 +100,7 @@ td, th {
     width: 100%;
 }
 
-.sign-in-form {
+.text-align-center {
     text-align: center;
 }
 
