--- a/public/style.css
+++ b/public/style.css
@@ -41,9 +41,14 @@ label {
     font-size: large;
 }
 
-p, h1, h2, h3 {
+p, h1, h2, h3, h4, h5 {
     font-family: Verdana, serif;
     padding: 10px;
+}
+
+h5 {
+    font-weight: bold;
+    padding: 10px 20px 10px 20px;
 }
 
 h1, h2, h3 {
@@ -161,4 +166,9 @@ td, th {
     padding: 20px;
     font-family: Verdana, serif;
     color: #DCDCDC;
+}
+
+.card-image {
+    width: 100%;
+    max-width: 250px;
 }
